--- a/src/css/main.css
+++ b/src/css/main.css
@@ -14,3 +14,7 @@ html {
     @apply py-2 px-4 bg-blue-200 text-white font-semibold rounded-lg shadow-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75;
   }
 }
+
+.ts-benefit-section {
+  height: 50rem;
+}
