--- a/src/partials/footer.hbs
+++ b/src/partials/footer.hbs
@@ -4,4 +4,9 @@
         <a href="/">Home</a>
         <a href="/imprint.html">Imprint</a>
     </div>
+    <div>
+        <a href="https://www.flaticon.com/de/kostenlose-animierte-icons/roboter" title="Animated roboter icon">Animated roboter icon by Freepik - Flaticon</a>
+        <a href="https://www.flaticon.com/de/kostenloses-animiertes-icon/zusammenarbeit_9822027?term=menschen&page=1&position=8&origin=tag&related_id=9822027" title="Animated people icon">Animated people icon by Freepik - Flaticon</a>
+        <a href="https://www.flaticon.com/de/kostenlose-animierte-icons/sicherheit" title="Animated shield icons">Animated shield icon by Freepik - Flaticon</a>
+    </div>
 </footer>
