fixing text color in footer.hbs

--- a/src/partials/footer.hbs
+++ b/src/partials/footer.hbs
@@ -1,4 +1,4 @@
-<footer class="mt-5 w-full text-xs text-center text-legendary-200">
+<footer class="mt-5 w-full text-xs text-center text-gray-100">
     <div class="mt-5 space-x-5">
         <a href="https://inspired.consulting">&copy; 2023 Inspired Consulting GmbH</a>
         <a href="/">Home</a>
