--- a/src/partials/footer.hbs
+++ b/src/partials/footer.hbs
@@ -1,7 +1,11 @@
-<footer class="my-12 w-full text-sm text-center text-gray-300">
-    <div class="mt-5 space-x-5">
-        <a href="https://inspired.consulting">&copy; 2023 Inspired Consulting GmbH</a>
+<footer class="mt-6 pt-6 pb-6 w-full text-md text-center text-gray-300">
+    <div class="space-x-5">
         <a href="/">Home</a>
+        <a href="/terms.html">Terms of Service</a>
+        <a href="/privacy.html">Privacy</a>
         <a href="/imprint.html">Imprint</a>
+    </div>
+    <div class="mt-4 text-xs text-gray-500">
+        <a href="https://inspired.consulting">&copy; 2024 Inspired Consulting GmbH</a>
     </div>
 </footer>
