added banner and transitions to links

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -32,3 +32,8 @@ html {
 .icon-container {
     height: 20px;
 }
+
+@keyframes marquee {
+    0% { transform: translateX(100%); }
+    100% { transform: translateX(-100%); }
+}
