--- a/src/partials/footer.hbs
+++ b/src/partials/footer.hbs
@@ -1,11 +1,11 @@
-<footer class="mt-6 pt-6 pb-6 w-full text-md text-center text-gray-300">
+<footer class="bg-primary-800 pt-12 pb-6 w-full text-md text-center text-gray-100">
     <div class="space-x-5">
         <a href="/">Home</a>
         <a href="/terms.html">Terms of Service</a>
         <a href="/privacy.html">Privacy</a>
         <a href="/imprint.html">Imprint</a>
     </div>
-    <div class="mt-4 text-xs text-gray-500">
+    <div class="mt-4 text-xs text-gray-300">
         <a href="https://inspired.consulting">&copy; 2024 Inspired Consulting GmbH</a>
     </div>
 </footer>
