--- a/src/css/main.css
+++ b/src/css/main.css
@@ -47,3 +47,10 @@ html {
     content: "\2197"; 
     margin-left: 0.2em;
 }
+
+/* DOCUMENT - List item marker */
+
+.ts-list-marker::marker {
+    color: #4F46E5;
+    font-size: 1.5rem;
+}
