--- a/src/partials/footer.hbs
+++ b/src/partials/footer.hbs
@@ -1,5 +1,5 @@
-<footer class="bg-primary-800 pt-12 pb-6 w-full text-md text-center text-gray-100">
-    <div class="space-x-5">
+<footer class="bg-primary-800 pt-12 pb-12 w-full text-md text-center text-gray-100">
+    <div class="flex flex-col sm:flex-row justify-center space-y-5 sm:space-y-0 sm:space-x-5">
         <a href="/">Home</a>
         <a href="/docs.html">Document</a>
         <a href="/terms.html">Terms of Service</a>
